# ESIOS-App

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  prometheus.yml  pyproject.toml
.github/workflows/: ci.yml
migrations/: 001_add_indexes.sql
src/esios_ingestor/: main.py  schemas.py
src/esios_ingestor/core/: config.py  database.py  logger.py  metrics.py
src/esios_ingestor/ingestion/: client.py  service.py
src/esios_ingestor/models/: price.py
src/esios_ingestor/web/: app.py  routes.py
tests/: conftest.py  test_api.py  test_metrics.py
