[project]
name = "esios-ingestor"
version = "0.1.0"
description = "ETL pipeline and API for ESIOS electricity prices"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy[asyncio]>=2.0.29",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.3",
    "typer>=0.12.0",
    "python-dateutil>=2.9.0",
    "rich>=14.3.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
esios = "esios_ingestor.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/esios_ingestor"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --asyncio-mode=auto"
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
]
ignore = [
    "E501",
    "B008",  # FastAPI Depends() in defaults is intentional
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
